--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: 'Segoe UI', sans-serif;
   color: #fff;
-  background-image: url('background.jpg');
+  background-image: url('back.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
